# src/api/rest/openapi.json
@@ -2185,29 +2185,6 @@
         },
         "summary": "Get a project",
         "tags": ["Projects"]
-      },
-      "delete": {
-        "operationId": "deleteProject",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": ""
-          },
-          "404": {
-            "description": "Project was not found."
-          }
-        },
-        "summary": "Delete a project",
-        "tags": ["Projects"]
       }
     },
     "/api/projects/{projectId}/adrs": {
